add_subdirectory(access_log)
add_subdirectory(api)
add_subdirectory(buffer)
add_subdirectory(common)
add_subdirectory(config)
#TBD add_subdirectory(dynamo) 
add_subdirectory(event)
add_subdirectory(filesystem)
#TBD add_subdirectory(filter)
#TBD add_subdirectory(grpc)
add_subdirectory(html)
add_subdirectory(http)
add_subdirectory(json)
add_subdirectory(network)
add_subdirectory(protobuf)
add_subdirectory(ratelimit)
add_subdirectory(request_info)
add_subdirectory(router)
#TBD add_subdirectory(runtime)
#TBD add_subdirectory(singleton)
add_subdirectory(ssl)
#TBD add_subdirectory(stats)
add_subdirectory(thread_local)
add_subdirectory(tracing)
add_subdirectory(upstream)


#TODO Source not compiled for Win32, hence skipping test folders
#add_subdirectory(compressor)
#add_subdirectory(decompressor)
#add_subdirectory(local_info)
#add_subdirectory(mongo)
#add_subdirectory(redis)