add_library(test_mocks_common_lib common.cc)

add_subdirectory(access_log)
add_subdirectory(api)
add_subdirectory(buffer)
add_subdirectory(config)
add_subdirectory(event)
add_subdirectory(filesystem)
add_subdirectory(grpc)
add_subdirectory(http)
add_subdirectory(init)
add_subdirectory(local_info)
add_subdirectory(network)
add_subdirectory(ratelimit)
add_subdirectory(redis)
add_subdirectory(request_info)
add_subdirectory(router)
add_subdirectory(runtime)
add_subdirectory(server)
add_subdirectory(ssl)
add_subdirectory(stats)
add_subdirectory(thread_local)
add_subdirectory(tracing)
add_subdirectory(upstream)

