
add_library(base64_lib base64.cc)

add_library(backoff_strategy_lib backoff_strategy.cc)

add_library(hex_lib hex.cc)

add_library(logger_lib logger.cc)

add_library(thread_lib thread.cc)

add_library(utility_lib utility.cc)

add_library(version_lib version.cc)

add_library(to_lower_table_lib to_lower_table.cc)

add_library(token_bucket_lib token_bucket_impl.cc)

add_library(logger_delegates_lib logger_delegates.cc)
